HammerJS hooked up. Minor fixes.

--- a/src/app/components/validator-profile/profile-card/profile-card.component.html
+++ b/src/app/components/validator-profile/profile-card/profile-card.component.html
@@ -19,6 +19,7 @@
         <!--Name-->
         <mdb-card-title>
           <h1>{{validator.description?.moniker}}</h1>
+          <a href="{{validator.description?.website}}" target=" "><i class="ion-social-chrome"></i></a>
         </mdb-card-title>
         <hr>
         <!--Quotation-->
