--- a/src/app/components/validator-profile/profile-card/profile-card.component.scss
+++ b/src/app/components/validator-profile/profile-card/profile-card.component.scss
@@ -6,6 +6,11 @@
     color: #4a4a4a;
 }
 
-// .row {
-//     max-width: 50%;
-// }
+a {
+    color: #4a4a4a;
+    font-size: 200%;
+}
+
+.card {
+    margin-bottom: 0;
+}
