--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -7,13 +7,13 @@
         <mdb-card cascade="true">
             <!--Card image-->
             <div class="view view-cascade gradient-card-header purple-gradient">
-            <h2 class="card-header-title">{{card.data}}</h2>
-            <p>{{card.title}}</p>
+            <p class="responsive-font-size">{{card.data}}</p>
+            <p class="responsive-font-size">{{card.title}}</p>
             </div>
             <!--/Card image-->
             <mdb-card-body cascade="true" class="text-center">
             <!--Card content-->
-            <mdb-card-text>
+            <mdb-card-text class="responsive-font-size">
                 <br>
                 Updated at {{card.timestamp}}
             </mdb-card-text>
