--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -56,8 +56,8 @@
     </ng-container>
 
     <ng-container matColumnDef="timestamp">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Timestamp </th>
-      <td mat-cell *matCellDef="let tx"> to-add </td>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"> Time </th>
+      <td mat-cell *matCellDef="let tx"> {{tx.details?.timestamp | timeAgo}} </td>
     </ng-container>
 
     <ng-container matColumnDef="expandedDetail">
