--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -44,7 +44,7 @@
     <ng-container matColumnDef="timestamp">
       <th mat-header-cell *matHeaderCellDef class="th-lg"> Timestamp </th>
       <td mat-cell *matCellDef="let block">  
-        {{block.time | ago }}
+        {{block.time | timeAgo }}
       </td>
     </ng-container>
   
