WiP Tx details in expanded row.

--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -7,7 +7,7 @@
         <mdb-card cascade="true">
             <!--Card image-->
             <div class="view view-cascade gradient-card-header purple-gradient">
-            <p class="responsive-font-size">{{card.data}}</p>
+            <h1 class="responsive-font-size">{{card.data}}</h1>
             <p class="responsive-font-size">{{card.title}}</p>
             </div>
             <!--/Card image-->
