--- a/src/app/components/validators/validators.component.scss
+++ b/src/app/components/validators/validators.component.scss
@@ -78,11 +78,11 @@ tbody {
 }
 
 .jailed {
-  color: rgb(255, 0, 0);
+  color: #F44336;
 }
 
 .jailedNot {
-  color: green;/*#00796b;*/
+  color: #4CAF50;/*#00796b;*/
 }
 
 .table-subtitle {
