--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -36,7 +36,10 @@
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef class="th-lg"> Status </th>
       <td mat-cell *matCellDef="let tx"> 
-        <span>{{tx.status}}</span>
+        <span *ngIf="tx.status==='Success'; else ElseStatus"><i class="ion-checkmark-circled success"></i></span>
+        <ng-template #ElseStatus>
+          <i class="ion-close-circled fail"></i>
+        </ng-template>
       </td>
     </ng-container>
 
@@ -67,6 +70,22 @@
             [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
           <div *ngFor="let tag of tx.tagsDecod">
             {{tag.key | titlecase}}: {{tag.value}}
+          </div>
+          <div class="row">
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Cras justo odio
+                <span class="badge badge-primary badge-pill">14</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Dapibus ac facilisis in
+                <span class="badge badge-primary badge-pill">2</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Morbi leo risus
+                <span class="badge badge-primary badge-pill">1</span>
+              </li>
+            </ul>
           </div>
         </div>
       </td>
