added table hearder icons. Minor UI tweaks.

--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <div class="main-row">
-  <mdb-carousel [isControls]="true" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'"
+  <mdb-carousel [isControls]="true" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'" [interval]="'0'"
 [animation]="'slide'">
   <mdb-carousel-item *ngFor="let item of slides; let i = index">
     <div class="row">
