--- a/src/app/components/txs/txs.component.scss
+++ b/src/app/components/txs/txs.component.scss
@@ -143,4 +143,8 @@ color: #F44336;/*#00796b;*/
 .list-group-item {
   background-color: #0D151F;
   color: white;
+}
+
+.badge {
+  margin-left: 100px;
  }
