--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -16,21 +16,21 @@
          class="mat-elevation-z8 w-auto">
     
     <ng-container matColumnDef="height" sticky>
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Height </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-soup-can"></i>Height</th>
       <td mat-cell *matCellDef="let block">
         {{block.height}}
       </td>
     </ng-container>
   
     <ng-container matColumnDef="transactions">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Transactions </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clipboard"></i>Transactions</th>
       <td mat-cell *matCellDef="let block">
         {{block.txs}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="proposer">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Proposer </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-contact"></i>Proposer</th>
       <td mat-cell *matCellDef="let block">
         <mat-chip-list><mat-chip color = "primary" selected>
           <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has(block.proposer) : false; else elseBlockProposer">
@@ -42,7 +42,7 @@
     </ng-container>
 
     <ng-container matColumnDef="timestamp">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Timestamp </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>Timestamp</th>
       <td mat-cell *matCellDef="let block">  
         {{block.time | timeAgo }}
       </td>
