--- a/src/styles.scss
+++ b/src/styles.scss
@@ -474,3 +474,7 @@ background-color: #F5F5F5; }
 border-radius: 10px;
 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 background-color: #aa66cc; }
+
+.card-cascade {
+  margin-bottom: 0;
+}
