--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,47 +1,53 @@
-<div class="row">
-  <table  mat-table [dataSource]="proposals" class="mat-elevation-z8">
+<div class="row scrollbar-primary table-responsive text-nowrap">
+  <table mat-table [dataSource]="proposals" class="mat-elevation-z8 w-auto">
     
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> Proposal ID </th>
+      <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let proposal">
         {{proposal.proposal_id}}
       </td>
     </ng-container>
   
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Title </th>
+    <ng-container matColumnDef="title" sticky>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"> Title </th>
       <td mat-cell *matCellDef="let proposal">
-        {{proposal.proposal_content.value.title}}
+        {{proposal.proposal_content.value.title | slice:0:20}}...
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"> Status </th>
       <td mat-cell *matCellDef="let proposal"> 
         {{proposal.proposal_status}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="submitted">
-      <th mat-header-cell *matHeaderCellDef> Submitted </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"> Submitted </th>
       <td mat-cell *matCellDef="let proposal">  
-        {{proposal.submit_time | date:"h:mm:ss a, MMM d, y"}}
+        {{proposal.submit_time | date:"h:mm a, MMM d, y"}}
       </td>
     </ng-container>
   
-
-    <ng-container matColumnDef="voting">
+    <!-- <ng-container matColumnDef="voting">
       <th mat-header-cell *matHeaderCellDef> Voting Started </th>
       <td mat-cell *matCellDef="let proposal">  
         {{proposal.voting_start_time | date:"h:mm:ss a, MMM d, y"}}
       </td>
-    </ng-container>
+    </ng-container> -->
 
     <ng-container matColumnDef="deposit">
-      <th mat-header-cell *matHeaderCellDef> Deposit </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"> Deposit </th>
       <td mat-cell *matCellDef="let proposal">  
         {{proposal.total_deposit[0].amount/1e6 | number:".2-2"}} <span class="ticker">ATOM</span>
       </td>
+    </ng-container>
+
+    <ng-container matColumnDef="depositEnd">
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Deposit End </th>
+        <td mat-cell *matCellDef="let proposal">  
+          Add
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
