--- a/src/app/components/governance/governance.component.scss
+++ b/src/app/components/governance/governance.component.scss
@@ -26,22 +26,6 @@ td {
   text-align: left;
 }
 
-thead th:nth-child(1) {
-  width: 10%;
-}
-
-thead th:nth-child(2) {
-  width: 10%;
-}
-
-thead th:nth-child(3) {
-  width: 20%;
-}
-
-thead th:nth-child(4) {
-  width: 20%;
-}
-
 tbody tr:nth-child(odd){
   background:#0D151F;
 }
@@ -107,4 +91,27 @@ tbody {
 .ticker {
   font-size: 80%;
   color: #B2DFDB;
+}
+
+th:nth-child(1) {
+  width: 5%;
+}
+
+th:nth-child(2) {
+  width: 30%;
+}
+
+th:nth-child(3) {
+  width: 15%;
+}
+
+th:nth-child(4) {
+  width: 20%;
+}
+th:nth-child(5) {
+  width: 15%;
+}
+
+th:nth-child(6) {
+  width: 15%;
 }
