--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -27,8 +27,8 @@
       <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-document-text"></i>Type</th>
       <td mat-cell *matCellDef="let tx">
         <mat-chip-list>
-          <mat-chip color = "primary" selected>
-            {{tx.tagsDecod[0].value | titlecase}}
+          <mat-chip *ngIf="tx.action && tx.action.length > 0" color = "primary" selected>
+            {{ tx.action[0] | titlecase }}
           </mat-chip>
         </mat-chip-list></td>
     </ng-container>
@@ -69,31 +69,58 @@
         <div
             class="tx-detail"
             [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
-          <div *ngFor="let tag of tx.tagsDecod">
-            {{tag.key | titlecase}}: {{tag.value}}
-          </div>
+          <!-- <span>
+            <div *ngFor="let tag of tx.tags">
+              {{tag.key | titlecase}}: {{tag.value}}
+            </div>
+          </span> -->
           <div class="row">
             <ul class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                From:
-                <span class="badge badge-primary badge-pill">sender</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                To:
-                <span class="badge badge-primary badge-pill">recipient</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span *ngFor="let action of tx.action; index as i">
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Type:
+                      <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
+                    </li>
+                <li *ngIf="tx.sender && tx.sender[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                  From:
+                  <span class="badge badge-primary badge-pill">{{tx.sender[i]}}</span>
+                </li>
+                <li *ngIf="tx.recipient && tx.recipient[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                  To:
+                  <span class="badge badge-primary badge-pill">{{tx.recipient[i]}}</span>
+                </li>
+                <li *ngIf="tx.delegator && tx.delegator[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                  Delegator:
+                  <span class="badge badge-primary badge-pill">{{tx.delegator[i]}}</span>
+                </li>
+                <li *ngIf="tx.source_validator && tx.source_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                  Validator:
+                  <span class="badge badge-primary badge-pill">{{tx.source_validator[i]}}</span>
+                </li>
+                <li *ngIf="tx.destination_validator && tx.destination_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                  Validator:
+                  <span class="badge badge-primary badge-pill">{{tx.destination_validator[i]}}</span>
+                </li>
+                <li *ngIf="tx.end_time && tx.end_time[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                  Ends:
+                  <span class="badge badge-primary badge-pill">{{tx.end_time[i]|date: 'h:ma dd/MM/yy' }}</span>
+                </li>
+                <br>
+              </span>
+              <!-- TODO add -->
+              <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
                 Amount:
                 <span class="badge badge-primary badge-pill">{{tx.gasUsed}}</span>
-              </li>
+              </li> -->
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Gas (used/wanted):
                 <span class="badge badge-primary badge-pill">{{tx.gasUsed}}/{{tx.gasWanted}}</span>
               </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
+              <!-- TODO add -->
+              <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
                 Memo:
                 <span class="badge badge-primary badge-pill">wtf is up G!</span>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
