dialog popup window refined

--- a/src/app/components/validator-profile/profile-card/profile-card.component.html
+++ b/src/app/components/validator-profile/profile-card/profile-card.component.html
@@ -26,9 +26,8 @@
         <p>
           <i class="fas fa-quote-left"></i>{{validator.description?.details}}
         </p>
-        <!-- Nav tabs -->
-        <mdb-tabset #staticTabs [buttonClass]="'md-tabs tabs-4 pills-secondary white mb-2'" [contentClass]="'card'">
-          <!--Panel 1-->
+
+        <!-- <mdb-tabset #staticTabs [buttonClass]="'md-tabs tabs-4 pills-secondary white mb-2'" [contentClass]="'card'">
           <mdb-tab heading="Operator address">
             <div class="row">
               <div class="col-12">
@@ -36,7 +35,7 @@
               </div>
             </div>
           </mdb-tab>
-          <!--Panel 2-->
+
           <mdb-tab heading="Delegator address">
             <div class="row">
               <div class="col-12">
@@ -44,8 +43,8 @@
               </div>
             </div>
           </mdb-tab>
-          <!--Panel 3-->
-        </mdb-tabset>
+ 
+        </mdb-tabset> -->
       </mdb-card-body>
     </mdb-card>
   <!-- </div> -->
