--- a/src/app/components/validator-profile/profile-card/profile-card.component.scss
+++ b/src/app/components/validator-profile/profile-card/profile-card.component.scss
@@ -1,6 +1,3 @@
-.testimonial-card {
-    max-width: 100%;
-}
 
 .card-title h1 {
     color: #4a4a4a;
@@ -11,6 +8,16 @@ a {
     font-size: 200%;
 }
 
-.card {
+// .row {
+//     background-color: transparent;
+// }
+
+.testimonial-card {
+    max-width: 400px;
+    // max-height: 800px;
     margin-bottom: 0;
+}
+
+.card {
+    margin: 0;
 }
