--- a/src/styles.scss
+++ b/src/styles.scss
@@ -183,10 +183,11 @@ header {
   min-height: 76vh;
 }
 
-.card {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
-  margin-bottom: 2rem;
-}
+// .card {
+//   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
+//   margin-bottom: 2rem;
+// }
+
 .card-header-title {
   color:#8F99A3;
   font-weight: 400;
