--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -200,7 +200,7 @@
               <p class="overflowed-text">Website: {{validator.description?.website}}</p>
               <p class="overflowed-text">Details: {{validator.description?.details}}</p>  -->
               <ul class="list-group list-group-horizontal-lg">
-                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openTestDialog(validator)">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   First seen
                   <span class="badge badge-primary badge-pill">{{validator.slashing?.start_height}}</span>
                 </li>
@@ -237,17 +237,21 @@
                   Self-bond%
                   <span class="badge badge-primary badge-pill">{{ validator.self_bond / validator.tokens | percent:'.2-2' }}</span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
                   Outstanding Rewards
                   <span class="badge badge-primary badge-pill" *ngIf="validator.rewards">{{validator.rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                </li> -->
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openRewardsDialog(validator)">
                   Rewards
                   <span class="badge badge-primary badge-pill" *ngIf="validator.outstanding_rewards">{{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
                 </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openAddressDialog(validator)"> 
+                  Address
+                  <span class="badge badge-primary badge-pill" *ngIf="validator.rewards"><i class="fa fa-id-badge"></i></span>
+                </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openValidatorDialog(validator)">
                   Details
-                  <span class="badge badge-primary badge-pill"><i class="fa fa-ellipsis-v"></i></span>
+                  <span class="badge badge-primary badge-pill"><i class="fa fa-info"></i></span>
                 </li>
               </ul>
             </div>
