--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -105,6 +105,17 @@
                   Ends:
                   <span class="badge badge-primary badge-pill">{{tx.end_time[i]|date: 'h:ma dd/MM/yy' }}</span>
                 </li>
+                <span *ngIf="action === 'vote'">
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Voter:
+                    <span class="badge badge-primary badge-pill">{{tx.voter[i]}}</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Proposal:
+                    <span class="badge badge-primary badge-pill">{{tx.proposal_id[i]}}</span>
+                  </li>
+                </span>
+                
                 <br>
               </span>
               <!-- TODO add -->
