--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -1,154 +1,163 @@
-<div class="row table-responsive text-nowrap scrollbar-primary">
-  <div class="container">
-    <div class="row">
-      <div class="col-8">
-        <mat-form-field>
-          <input #queryInputRef matInput placeholder="Enter tx hash">
-        </mat-form-field>
-      </div>
-      <div class="col-4">
-        <button (click) = "queryTx(queryInputRef.value)" mat-raised-button color="accent">Search</button>    
+<span *ngIf="txs && txs.length >= INITIAL_TXS_COUNT; else elseLoading">
+  <div class="row table-responsive text-nowrap scrollbar-primary">
+    <div class="container">
+      <div class="row">
+        <div class="col-8">
+          <mat-form-field>
+            <input #queryInputRef matInput placeholder="Enter tx hash">
+          </mat-form-field>
+        </div>
+        <div class="col-4">
+          <button (click) = "queryTx(queryInputRef.value)" mat-raised-button color="accent">Search</button>    
+        </div>
       </div>
     </div>
-  </div>
-  <table mat-table
-        [dataSource]="dataSource" 
-        multiTemplateDataRows
-        class="mat-elevation-z8 w-auto">
+    <table mat-table
+          [dataSource]="dataSource" 
+          multiTemplateDataRows
+          class="mat-elevation-z8 w-auto">
 
-    <ng-container matColumnDef="hash" sticky>
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>Hash</th>
-      <td mat-cell *matCellDef="let tx" mdbPopover="{{tx.hash}}"
-      placement="top"
-      triggers="focus" mdbWavesEffect> {{tx.hash | slice:0:15 }}... </td>
-    </ng-container>
+      <ng-container matColumnDef="hash" sticky>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>Hash</th>
+        <td mat-cell *matCellDef="let tx" mdbPopover="{{tx.hash}}"
+        placement="top"
+        triggers="focus" mdbWavesEffect> {{tx.hash | slice:0:15 }}... </td>
+      </ng-container>
 
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-document-text"></i>Type</th>
-      <td mat-cell *matCellDef="let tx">
-        <mat-chip-list>
-          <mat-chip *ngIf="tx.action && tx.action.length > 0" color = "primary" selected>
-            {{ tx.action[0] | titlecase }}
-          </mat-chip>
-        </mat-chip-list></td>
-    </ng-container>
-
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-checkbox-outline"></i>Status</th>
-      <td mat-cell *matCellDef="let tx"> 
-        <!-- <span *ngIf="tx.status==='Success'; else ElseStatus"><i class="ion-checkmark-circled success"></i></span> -->
-        <span *ngIf="!tx.details?.code; else ElseStatus"><i class="ion-checkmark-circled success"></i></span>
-        <ng-template #ElseStatus>
-          <i class="ion-close-circled fail"></i>
-        </ng-template>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="fee">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-card"></i>Fee</th>
-      <td mat-cell *matCellDef="let tx"> 
-        {{ 
-          tx.details?.tx.value.fee.amount ?
-          tx.details.tx.value.fee.amount[0].amount : '0' 
-        }}&nbsp;<span class="ticker">uatom</span> 
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="height">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-soup-can"></i>Height</th>
-      <td mat-cell *matCellDef="let tx"> {{tx.height}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="timestamp">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>Time</th>
-      <td mat-cell *matCellDef="let tx"> {{tx.details?.timestamp | timeAgo}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="expandedDetail">
-      <td mat-cell *matCellDef="let tx" [attr.colspan]="displayedColumns.length">
-        <div
-            class="tx-detail"
-            [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
-          <!-- <span>
-            <div *ngFor="let tag of tx.tags">
-              {{tag.key | titlecase}}: {{tag.value}}
-            </div>
-          </span> -->
-          <div class="row">
-            <ul class="list-group">
-              <span *ngFor="let action of tx.action; index as i">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Type:
-                      <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
-                    </li>
-                <li *ngIf="tx.sender && tx.sender[i]" class="list-group-item d-flex justify-content-between align-items-center">
-                  From:
-                  <span class="badge badge-primary badge-pill">{{tx.sender[i]}}</span>
-                </li>
-                <li *ngIf="tx.recipient && tx.recipient[i]" class="list-group-item d-flex justify-content-between align-items-center">
-                  To:
-                  <span class="badge badge-primary badge-pill">{{tx.recipient[i]}}</span>
-                </li>
-                <li *ngIf="tx.delegator && tx.delegator[i]" class="list-group-item d-flex justify-content-between align-items-center">
-                  Delegator:
-                  <span class="badge badge-primary badge-pill">{{tx.delegator[i]}}</span>
-                </li>
-                <li *ngIf="tx.source_validator && tx.source_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
-                  Validator:
-                  <span class="badge badge-primary badge-pill">{{tx.source_validator[i]}}</span>
-                </li>
-                <li *ngIf="tx.destination_validator && tx.destination_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
-                  Validator:
-                  <span class="badge badge-primary badge-pill">{{tx.destination_validator[i]}}</span>
-                </li>
-                <li *ngIf="tx.end_time && tx.end_time[i]" class="list-group-item d-flex justify-content-between align-items-center">
-                  Ends:
-                  <span class="badge badge-primary badge-pill">{{tx.end_time[i]|date: 'h:ma dd/MM/yy' }}</span>
-                </li>
-                <span *ngIf="action === 'vote'">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Voter:
-                    <span class="badge badge-primary badge-pill">{{tx.voter[i]}}</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Proposal:
-                    <span class="badge badge-primary badge-pill">{{tx.proposal_id[i]}}</span>
-                  </li>
-                </span>
-                
-                <br>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-document-text"></i>Type</th>
+        <td mat-cell *matCellDef="let tx">
+          <mat-chip-list>
+            <mat-chip color = "primary" selected>
+              <span *ngIf="tx.action && tx.action.length > 0; else elseAction">
+                {{ tx.action[0] | titlecase }}
               </span>
-              <!-- TODO add -->
-              <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
-                Amount:
-                <span class="badge badge-primary badge-pill">{{tx.gasUsed}}</span>
-              </li> -->
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                Gas (used/wanted):
-                <span class="badge badge-primary badge-pill">{{tx.gasUsed}}/{{tx.gasWanted}}</span>
-              </li>
-              <!-- TODO add -->
-              <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
-                Memo:
-                <span class="badge badge-primary badge-pill">wtf is up G!</span>
-              </li> -->
-            </ul>
+              <ng-template #elseAction>
+                {{ tx.error | titlecase }}
+              </ng-template>
+            </mat-chip>
+            </mat-chip-list></td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-checkbox-outline"></i>Status</th>
+        <td mat-cell *matCellDef="let tx"> 
+          <span *ngIf="!tx.error; else elseStatus"><i class="ion-checkmark-circled success"></i></span>
+          <ng-template #elseStatus>
+            <i class="ion-close-circled fail"></i>
+          </ng-template>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="fee">
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-card"></i>Fee</th>
+        <td mat-cell *matCellDef="let tx"> 
+          {{ 
+            tx.details?.tx.value.fee.amount ?
+            tx.details.tx.value.fee.amount[0].amount : '0' 
+          }}&nbsp;<span class="ticker">uatom</span> 
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="height">
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-soup-can"></i>Height</th>
+        <td mat-cell *matCellDef="let tx"> {{tx.height}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="timestamp">
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>Time</th>
+        <td mat-cell *matCellDef="let tx"> {{tx.details?.timestamp | timeAgo}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let tx" [attr.colspan]="displayedColumns.length">
+          <div
+              class="tx-detail"
+              [@detailExpand]="tx == expandedElement ? 'expanded' : 'collapsed'">
+            <!-- <span>
+              <div *ngFor="let tag of tx.tags">
+                {{tag.key | titlecase}}: {{tag.value}}
+              </div>
+            </span> -->
+            <div class="row">
+              <ul class="list-group">
+                <span *ngFor="let action of tx.action; index as i">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Type:
+                        <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
+                      </li>
+                  <li *ngIf="tx.sender && tx.sender[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                    From:
+                    <span class="badge badge-primary badge-pill">{{tx.sender[i]}}</span>
+                  </li>
+                  <li *ngIf="tx.recipient && tx.recipient[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                    To:
+                    <span class="badge badge-primary badge-pill">{{tx.recipient[i]}}</span>
+                  </li>
+                  <li *ngIf="tx.delegator && tx.delegator[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                    Delegator:
+                    <span class="badge badge-primary badge-pill">{{tx.delegator[i]}}</span>
+                  </li>
+                  <li *ngIf="tx.source_validator && tx.source_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                    Validator:
+                    <span class="badge badge-primary badge-pill">{{tx.source_validator[i]}}</span>
+                  </li>
+                  <li *ngIf="tx.destination_validator && tx.destination_validator[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                    Validator:
+                    <span class="badge badge-primary badge-pill">{{tx.destination_validator[i]}}</span>
+                  </li>
+                  <li *ngIf="tx.end_time && tx.end_time[i]" class="list-group-item d-flex justify-content-between align-items-center">
+                    Ends:
+                    <span class="badge badge-primary badge-pill">{{tx.end_time[i]|date: 'h:ma dd/MM/yy' }}</span>
+                  </li>
+                  <span *ngIf="action === 'vote'">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Voter:
+                      <span class="badge badge-primary badge-pill">{{tx.voter[i]}}</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Proposal:
+                      <span class="badge badge-primary badge-pill">{{tx.proposal_id[i]}}</span>
+                    </li>
+                  </span>
+                  
+                  <br>
+                </span>
+                <!-- TODO add -->
+                <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
+                  Amount:
+                  <span class="badge badge-primary badge-pill">{{tx.gasUsed}}</span>
+                </li> -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  Gas (used/wanted):
+                  <span class="badge badge-primary badge-pill">{{tx.gasUsed}}/{{tx.gasWanted}}</span>
+                </li>
+                <!-- TODO add -->
+                <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
+                  Memo:
+                  <span class="badge badge-primary badge-pill">wtf is up G!</span>
+                </li> -->
+              </ul>
+            </div>
           </div>
-        </div>
-      </td>
-    </ng-container>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let tx; columns: displayedColumns;"
-        [class.example-expanded-row]="expandedElement === tx"
-        (click)="expandedElement = expandedElement === tx ? null : tx" mdbTooltip="Click to see more" placement="top">
-    </tr>
-    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="tx-detail-row"></tr>
-  </table>
-
-  <div class="row paginator">
-    <mat-paginator [hidePageSize]="true" [pageSizeOptions]="[100]"></mat-paginator>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let tx; columns: displayedColumns;"
+          [class.example-expanded-row]="expandedElement === tx"
+          (click)="expandedElement = expandedElement === tx ? null : tx" mdbTooltip="Click to see more" placement="top">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="tx-detail-row"></tr>
+    </table>
+    <!-- <div class="row paginator">
+      <mat-paginator [hidePageSize]="true" [pageSizeOptions]="[100]"></mat-paginator>
+    </div> -->
   </div>
-  
-  <!-- </div> -->
-</div>
+  <button mdbBtn (click)="displayOlderTxs();" type="button" color="primary" block="true" mdbWavesEffect>Show More</button>
+</span>
+<ng-template #elseLoading>
+  <div style="display: flex; justify-content: center;">
+    <mdb-spinner spinnerColor="blue"></mdb-spinner>
+  </div> 
+</ng-template>
