--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,3 +1,4 @@
+<app-gov-detail></app-gov-detail>
 <div class="row scrollbar-primary table-responsive text-nowrap">
   <table mat-table [dataSource]="proposals" class="mat-elevation-z8 w-auto">
     
