--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -229,7 +229,7 @@
                     </ng-template>
                   </span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openPieChartDialog(validator)">
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openGovDetailDialog(validator)">
                   Missed Blocks
                   <span class="badge badge-primary badge-pill">{{validator.slashing?.missed_blocks_counter}}</span>
                 </li>
