--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -209,7 +209,7 @@
         <body>
             <app-status-bar></app-status-bar>
             <!-- <app-carousel></app-carousel> -->
-            <app-test></app-test>
+            <!-- <app-test></app-test> -->
             <router-outlet></router-outlet>
             <app-scroll-top></app-scroll-top>
             <app-footer></app-footer>
