--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,4 +1,4 @@
-<app-test></app-test>
+<!-- <app-test></app-test> -->
 <div class="row scrollbar-primary table-responsive text-nowrap">
   <table mat-table [dataSource]="proposals" class="mat-elevation-z8 w-auto">
     
@@ -47,11 +47,11 @@
     <ng-container matColumnDef="depositEnd">
         <th mat-header-cell *matHeaderCellDef class="th-lg"> Deposit End </th>
         <td mat-cell *matCellDef="let proposal">  
-          Add
+          {{proposal.deposit_end_time | date:"h:mm a, MMM d, y"}}
         </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr style="cursor: pointer;" (click)="openGovDetailDialog()" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
