--- a/src/app/components/governance/gov-detail/gov-detail.component.scss
+++ b/src/app/components/governance/gov-detail/gov-detail.component.scss
@@ -10,3 +10,10 @@
 .row-2 {
     margin-top: 30px;
 }
+
+li {
+    max-height: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
