--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,6 +1,5 @@
-<!-- <app-test></app-test> -->
 <div class="row scrollbar-primary table-responsive text-nowrap">
-  <table mat-table [dataSource]="proposals" class="mat-elevation-z8 w-auto">
+  <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
     
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -51,7 +50,27 @@
         </td>
     </ng-container>
 
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let proposal" [attr.colspan]="displayedColumns.length">
+        <div
+            class="proposal-detail"
+            [@detailExpand]="proposal == expandedElement ? 'expanded' : 'collapsed'">
+          <div class="row">
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span style="cursor: pointer;" (click)="openGovDetailDialog(proposal)" class="badge badge-primary badge-pill">Details</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr style="cursor: pointer;" (click)="openGovDetailDialog()" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let proposal; columns: displayedColumns;"
+        [class.example-expanded-row]="expandedElement === proposal"
+        (click)="expandedElement = expandedElement === proposal ? null : proposal" mdbTooltip="Click to see more" placement="top">
+    </tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="proposal-detail-row"></tr>
   </table>
 </div>
