Gov proposer mapped

--- a/src/app/components/governance/gov-detail/gov-detail.component.html
+++ b/src/app/components/governance/gov-detail/gov-detail.component.html
@@ -20,7 +20,13 @@
       <div class="col-7">
         <ul class="list-group">
           <li class="list-group-item">Title: {{proposal.proposal_content.value.title}}</li>
-          <li *ngIf="proposal.proposer" class="list-group-item">Proposer: {{proposal.proposer}}</li>
+          <li *ngIf="proposal.proposer" class="list-group-item">
+            Proposer: 
+            <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( proposal.proposer ) : false; else elseVetoVoter">
+              {{ (appState | async).valsMap.get( proposal.proposer )}}
+            </span>
+            <ng-template #elseVetoVoter>{{proposal.proposer}}</ng-template>
+          </li>
           <li class="list-group-item">Description: {{proposal.proposal_content.value.description}}</li>
           <li class="list-group-item">Deposit: {{proposal.total_deposit[0].amount}} {{proposal.total_deposit[0].denom}}</li>
           <li class="list-group-item">Status: {{proposal.proposal_status}}</li>
